0.8.2

Added:
 - Option changes are highlighted now.
 - Paths -> Apply transformations to paths.

0.8.1

Added:
 - 'Group elements by equal styles' can group by 'transform' now.
 - 'overflow' attribute cleaning.

Fixed:
 - Incorrect grouping in 'Group elements by equal styles'.
 - Processing gradients with one stop children.

0.8.0

Added:
 - Elements -> Group elements by equal styles.
 - Elements -> Resolve 'use' elements.
 - Attributes -> Apply transformations to shapes.
 - Paths -> Use implicit LineTo commands.
 - Paths -> Convert path segments into shorter ones.
 - Output -> Path's coordinates numeric precision.
 - Support for universal and id CSS selectors.
 - Updates checking support.

Changed:
 - Default numeric precision is 12 instead of 8.
 - Files TreeView is read-only during cleaning now.
 - Stop button doesn't block GUI now.

Removed:
 - Attributes -> Move presentational attributes to the parent group.

0.7.1

Added:
 - 'Remove unresolved classes from 'class' attributes' option.
 - Changelog tab with this text.

Changed:
 - 'Remove invisible elements' now removes default 'feColorMatrix' element.
 - gzip compression is enabled by default.

Fixed:
 - CSS processing when style defined multiple times.
 - 'px' removing from the <list-of-lengths>.

Removed:
 - (GUI): Time column.

0.7.0

 - Initial release.